--- a/login.html
+++ b/login.html
@@ -33,7 +33,8 @@
                 
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" required placeholder="••••••••">
+                    <input type="password" id="password" required placeholder="****" 
+       autocomplete="current-password">
                 </div>
                 
                 <button type="submit" class="btn btn-primary btn-block">
